<resources>
    <string name="app_name">CSE 545 Project 1</string>
    <string name="group_43">Group 43</string>
    <string name="member_pooja">Pooja Kulkarni - pkulka19@asu.edu</string>
    <string name="member_swapnil">Swapnil Kumbhar - skumbha1@asu.edu</string>
    <string name="broadcast_activity">Broadcast</string>
    <string name="service_activity">Service</string>
    <string name="content_provider_activity">Content Provider</string>
    <string name="insert_contact">Save New Contact</string>
    <string name="clear_contacts">Clear Contacts</string>
    <string name="all_contacts">All Contacts</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="contact_action">Action</string>
    <string name="contact_name_hint">Contact Name</string>
    <string name="phone_number_hint">Phone number</string>

    <!-- Service Activity Strings   -->
    <string name="svc_get_time_btn">Get Current Time</string>
    <string name="svc_time_tb">Current Time</string>
    <string name="svc_stop_btn">Stop Service</string>
    <string name="svc_start_btn">Start Service</string>
</resources>