<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/group_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_43"
            android:gravity="center"
            android:textSize="25sp" />
        <TextView
            android:layout_below="@+id/group_number"
            android:id="@+id/group_member_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member_pooja"
            android:gravity="center"
            android:textSize="18sp" />
        <TextView
            android:layout_below="@+id/group_member_1"
            android:id="@+id/group_member_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member_swapnil"
            android:gravity="center"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>