<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/svc_time_tb"
            android:layout_centerHorizontal="true"
            android:textSize="23sp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="111dp" />

        <Button
            android:id="@+id/btn_curr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:onClick="updateCurrentTime"
            android:text="@string/svc_get_time_btn"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="298dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_curr_time"
            >
            <Button
                android:id="@+id/svc_stop_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_curr_time"
                android:onClick="stopService"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:text="@string/svc_stop_btn"
                />

            <Button
                android:id="@+id/svc_start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_curr_time"
                android:layout_toRightOf="@id/svc_stop_btn"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:onClick="startService"
                android:layout_centerHorizontal="true"
                android:text="@string/svc_start_btn"
                />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>